[gd_scene load_steps=15 format=3 uid="uid://dp7mp2oc8at6y"]

[ext_resource type="Script" path="res://Script/enemy_Treeboss.gd" id="1_h7o0k"]
[ext_resource type="Texture2D" uid="uid://bb421vdm7lu2" path="res://Assets/UI/Bosshealthbar-empty.png" id="2_p0hsm"]
[ext_resource type="Texture2D" uid="uid://baqjirsxbruy3" path="res://Assets/Enemy_Sprites/Spirittreeboss.png" id="2_ut8ha"]
[ext_resource type="Texture2D" uid="uid://d2cvcawr3bnjv" path="res://Assets/UI/Bosshealthbar-full.png" id="3_wmb66"]
[ext_resource type="FontFile" uid="uid://bu5hdtbp88ojw" path="res://Fonts/EXEPixelPerfect.ttf" id="4_6jc8l"]
[ext_resource type="Texture2D" uid="uid://bpt5xouk1ltxv" path="res://Assets/Particle_Sprites/Bigprojsprites-bigcircle.png" id="5_si78k"]
[ext_resource type="Texture2D" uid="uid://ditkmrdmoscht" path="res://Assets/UI/rotatingarrow.png" id="8_l0uwk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1rmrd"]
radius = 21.095

[sub_resource type="Animation" id="Animation_2akjp"]
length = 0.001

[sub_resource type="Animation" id="Animation_vq5j7"]
resource_name = "default"

[sub_resource type="Animation" id="Animation_ei3xv"]
resource_name = "hurt"
length = 0.2

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tudjj"]
_data = {
"RESET": SubResource("Animation_2akjp"),
"default": SubResource("Animation_vq5j7"),
"hurt": SubResource("Animation_ei3xv")
}

[sub_resource type="Curve" id="Curve_vfb2r"]
_data = [Vector2(0.00561798, 0.032967), 0.0, 11.7363, 0, 0, Vector2(0.162921, 1), 0.0, 0.0, 0, 0, Vector2(0.58427, 0.923077), -0.740125, -0.740125, 0, 0, Vector2(1, 0), -3.28971, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_f4ocr"]
offsets = PackedFloat32Array(0, 0.12, 0.513333, 0.753333, 1)
colors = PackedColorArray(0.945098, 0.701961, 0, 0, 1, 0.894118, 0, 1, 1, 0.556863, 0.160784, 1, 1, 0.243137, 0.372549, 0.627451, 1, 0, 0, 0)

[node name="Enemy_Treeboss" type="CharacterBody2D" groups=["enemy_m"]]
z_index = 1
script = ExtResource("1_h7o0k")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.501961)
texture_filter = 1
position = Vector2(0, 7)
scale = Vector2(1, 0.640001)
texture = ExtResource("5_si78k")

[node name="Icon" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -18)
texture = ExtResource("2_ut8ha")
hframes = 4
vframes = 3

[node name="Anim" type="AnimationPlayer" parent="Icon"]

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="Healthbar" type="TextureProgressBar" parent="UI"]
offset_left = 46.0
offset_top = 9.0
offset_right = 246.0
offset_bottom = 19.0
max_value = 2000.0
value = 2000.0
texture_under = ExtResource("2_p0hsm")
texture_progress = ExtResource("3_wmb66")

[node name="Bossname" type="Label" parent="UI"]
texture_filter = 1
offset_left = 46.0
offset_right = 246.0
offset_bottom = 13.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_6jc8l")
text = "Log of Death"
horizontal_alignment = 1

[node name="Rot" type="Node2D" parent="."]
visible = false

[node name="Rotatingarrow" type="Sprite2D" parent="Rot"]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("8_l0uwk")

[node name="HURTbox_Enemy" type="Area2D" parent="."]

[node name="box" type="CollisionShape2D" parent="HURTbox_Enemy"]
shape = SubResource("CircleShape2D_1rmrd")

[node name="EffectsAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tudjj")
}

[node name="Fire" type="CPUParticles2D" parent="."]
z_index = -1
texture_filter = 1
emitting = false
amount = 4
lifetime = 2.0
texture = ExtResource("5_si78k")
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2(0, -1)
spread = 10.0
gravity = Vector2(0, 0)
initial_velocity_min = 12.0
initial_velocity_max = 20.0
scale_amount_min = 0.6
scale_amount_curve = SubResource("Curve_vfb2r")
color_ramp = SubResource("Gradient_f4ocr")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="UpdateTimer" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true
autostart = true

[node name="Label" type="Label" parent="."]
offset_left = -54.0
offset_top = -69.0
offset_right = 55.0
offset_bottom = -46.0
theme_override_fonts/font = ExtResource("4_6jc8l")
autowrap_mode = 2

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="timeout" from="Timers/UpdateTimer" to="." method="_on_update_timer_timeout"]
